# buck-boost-course

./: .gitmodules  README.md
00_Init/: 00_Init.ioc  CMakeLists.txt  Makefile
00_Init/Core/Inc/: font5x7.h
00_Init/Core/Src/: main.c
00_Init/User/Src/: program.cpp
01_BUCK_OpenLoop/: build.cmd
01_BUCK_OpenLoop/Common/: CtlLoop.c  CtlLoop.h  function.c  function.h
01_BUCK_OpenLoop/MDK-ARM/: EXAMPLE.uvguix.vmedintsev  keil.bat
02_BOOST_OpenLoop/Common/: CtlLoop.c  CtlLoop.h  function.c
02_BOOST_OpenLoop/MDK-ARM/: EXAMPLE.uvguix.vmedintsev  EXAMPLE.uvoptx
03_BUCK_BOOST_OpenLoop/Common/: CtlLoop.c  CtlLoop.h  function.c  function.h
03_BUCK_BOOST_OpenLoop/MDK-ARM/: EXAMPLE.uvguix.vmedintsev  EXAMPLE.uvprojx  startup_stm32f334x8.lst
04_BUCK_VLoop_PI/Common/: CtlLoop.c  CtlLoop.h  function.c  function.h
04_BUCK_VLoop_PI/MDK-ARM/: EXAMPLE.uvguix.vmedintsev
05_BUCK_VLoop_PID/: .gitignore  EXAMPLE.ioc
05_BUCK_VLoop_PID/Common/: CtlLoop.c  CtlLoop.h  function.c
05_BUCK_VLoop_PID/MDK-ARM/: EXAMPLE.uvguix.vmedintsev  EXAMPLE.uvoptx
06_BUCK_VLoop_Type3/Common/: CtlLoop.c  CtlLoop.h  function.c
06_BUCK_VLoop_Type3/MDK-ARM/: EXAMPLE.uvguix.vmedintsev  EXAMPLE.uvoptx
07_BUCK_VLoop_PI_ILimit/Common/: CtlLoop.c  CtlLoop.h  function.c
07_BUCK_VLoop_PI_ILimit/MDK-ARM/: EXAMPLE.uvguix.vmedintsev  EXAMPLE.uvoptx  EXAMPLE.uvprojx
08_BUCK_ILoop_PI/Common/: CtlLoop.c  CtlLoop.h  function.c  function.h
08_BUCK_ILoop_PI/MDK-ARM/: EXAMPLE.uvguix.vmedintsev  EXAMPLE.uvoptx  startup_stm32f334x8.lst
09_BOOST_VLoop_PI/: CMakeLists.txt
09_BOOST_VLoop_PI/Common/: CtlLoop.c  CtlLoop.h  function.c
09_BOOST_VLoop_PI/MDK-ARM/: EXAMPLE.uvguix.vmedintsev
10_BOOST_VLoop_PID/Common/: CtlLoop.c  CtlLoop.h  function.c
10_BOOST_VLoop_PID/MDK-ARM/: EXAMPLE.uvguix.vmedintsev  EXAMPLE.uvoptx
10_BOOST_VLoop_PID/st7789/: st7789.c  st7789.h
11_BOOST_VLoop_Type3/Common/: CtlLoop.c  CtlLoop.h  function.c
11_BOOST_VLoop_Type3/MDK-ARM/: EXAMPLE.uvguix.vmedintsev  EXAMPLE.uvoptx
11_BOOST_VLoop_Type3/st7789/: CMakeLists.txt
12_BUCK_BOOST_VLoop_PID/Common/: CtlLoop.c  CtlLoop.h  function.c
12_BUCK_BOOST_VLoop_PID/MDK-ARM/: EXAMPLE.uvguix.vmedintsev  EXAMPLE.uvoptx
13_BUCK_BOOST_VLoop_PID_BiDir/Common/: CtlLoop.c  function.c
13_BUCK_BOOST_VLoop_PID_BiDir/Core/: CMakeLists.txt
13_BUCK_BOOST_VLoop_PID_BiDir/MDK-ARM/: EXAMPLE.uvguix.vmedintsev  startup_stm32f334x8.s
99_BOARD_TEST/: 99_BOARD_TEST.ioc  CMakeLists.txt  CMakePresets.json  Makefile  configure.cmd
99_BOARD_TEST/Common/: CMakeLists.txt  CtlLoop.c  CtlLoop.h  function.c  function.h
99_BOARD_TEST/Core/: CMakeLists.txt
99_BOARD_TEST/Core/Inc/: main.h
99_BOARD_TEST/Core/Src/: main.c  stm32f3xx_it.c
99_BOARD_TEST/RTT/: CMakeLists.txt
99_BOARD_TEST/Tests/: .gdbinit  BBC_SW_LLR_BOARD_TEST_01_XX.md  BBC_SW_LLR_BOARD_TEST_02_XX.md  BOARD_TEST_RUNNING.gdb  test_runner.cmd
99_BOARD_TEST/Tests/BBC_SW_LLR/BOARD_TEST_01/: BBC_SW_LLR_BOARD_TEST_01.c  BBC_SW_LLR_BOARD_TEST_01.h  BBC_SW_LLR_BOARD_TEST_01_01.gdb  BBC_SW_LLR_BOARD_TEST_01_01.py  BBC_SW_LLR_BOARD_TEST_01_02.gdb  BBC_SW_LLR_BOARD_TEST_01_02.py  BBC_SW_LLR_BOARD_TEST_01_03.gdb  BBC_SW_LLR_BOARD_TEST_01_03.py  BBC_SW_LLR_BOARD_TEST_01_04.gdb  BBC_SW_LLR_BOARD_TEST_01_04.py  BBC_SW_LLR_BOARD_TEST_01_05.gdb  BBC_SW_LLR_BOARD_TEST_01_05.py  BBC_SW_LLR_BOARD_TEST_01_06.gdb  BBC_SW_LLR_BOARD_TEST_01_06.py  BBC_SW_LLR_BOARD_TEST_01_07.gdb  BBC_SW_LLR_BOARD_TEST_01_07.py  BBC_SW_LLR_BOARD_TEST_01_08.gdb  BBC_SW_LLR_BOARD_TEST_01_08.py  BBC_SW_LLR_BOARD_TEST_01_09.gdb  BBC_SW_LLR_BOARD_TEST_01_09.py  CMakeLists.txt
99_BOARD_TEST/Tests/BBC_SW_LLR/BOARD_TEST_02/: BBC_SW_LLR_BOARD_TEST_02.c  BBC_SW_LLR_BOARD_TEST_02_01.gdb  BBC_SW_LLR_BOARD_TEST_02_01.py  BBC_SW_LLR_BOARD_TEST_02_02.gdb  BBC_SW_LLR_BOARD_TEST_02_02.py  BBC_SW_LLR_BOARD_TEST_02_03.gdb  BBC_SW_LLR_BOARD_TEST_02_03.py  BBC_SW_LLR_BOARD_TEST_02_04.gdb  BBC_SW_LLR_BOARD_TEST_02_04.py  BBC_SW_LLR_BOARD_TEST_02_05.gdb  BBC_SW_LLR_BOARD_TEST_02_05.py  CMakeLists.txt
99_BOARD_TEST/Tests/BBC_SW_LLR/BOARD_TEST_03/: BBC_SW_LLR_BOARD_TEST_03_01.gdb  BBC_SW_LLR_BOARD_TEST_03_01.py  BBC_SW_LLR_BOARD_TEST_03_02.gdb  BBC_SW_LLR_BOARD_TEST_03_02.py  BBC_SW_LLR_BOARD_TEST_03_03.gdb  BBC_SW_LLR_BOARD_TEST_03_03.py  BBC_SW_LLR_BOARD_TEST_03_04.gdb  BBC_SW_LLR_BOARD_TEST_03_04.py  CMakeLists.txt
99_BOARD_TEST/Tests/BBC_SW_LLR/BOARD_TEST_10/: BBC_SW_LLR_BOARD_TEST_10_01.gdb  BBC_SW_LLR_BOARD_TEST_10_01.py  BBC_SW_LLR_BOARD_TEST_10_02.gdb  BBC_SW_LLR_BOARD_TEST_10_02.py  CMakeLists.txt
99_BOARD_TEST/Unity/: CMakeLists.txt
99_BOARD_TEST/User/: CMakeLists.txt
99_BOARD_TEST/User/Src/: pics.c  program.cpp  syscalls.c
libs/st7789/: st7789.c  st7789.h
(+53 files in other folders)
